--- a/slider.css
+++ b/slider.css
@@ -3,54 +3,227 @@ body{
     height: 100%;
     max-width: 1920px;
     overflow: hidden;
+    background-color: #232323;
+}
+
+:root {
+    --slide-1-link: #E1FF2D;
+    --slide-2-link: #FF4F33;
+    --slide-3-link: #19FC67;
+    --slide-4-link: #336DFF;
 }
 
 .contianer{
-    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
 }
 
 .slider_left{
-    position: absolute;
+    position:absolute;
     top: 0;
     left: 0;
     width: 300px;
     height: 900px;
     background-color: aqua;
-    z-index: 1;
+}
+
+.prev{
+    position: absolute;
+    width: 135px;
+    height: 100px;
+    top: 450px;
+}
+
+.prev_line01{
+    position: absolute;
+    width: 80px;
+    height: 1px;
+    top: 1px;
+    background-color: #fff;
+}
+
+.prev_line02{
+    position: absolute;
+    width: 55px;
+    height: 3px;
+    left: 80px;
+    background-color: #fff;
+}
+
+.prev_text{
+    position: absolute;
+    top: 15px;
+    left: 80px;
+    width: 55px;
+    color: #fff;
+    text-align: center;
+    font-family: 'SUIT-Light';
 }
 
 .slider{
     position: absolute;
     top: 0;
-    left: 300px;
+    left: 0px;
     width: 400vw;
     height: 900px;
-    background-color: #232323;
-    z-index: 0;
 }
 
 .slide{
     width: 100vw;
     float: left;
+    padding-top: 150px;
+}
+
+.slide h1{
+    width: 1320px;
+    height: 610px;
+    margin: auto;
+    font-family: 'LeferiPoint-BlackA';
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 150px;
+    line-height: 200px;
+    text-align: center;
+    letter-spacing: 1px;
+    -webkit-text-fill-color: #232323;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #fff;
+}
+
+.slide-pointtext-01 {
+    -webkit-text-fill-color: #E1FF2D;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #232323;
+}
+
+.slide-pointtext-02 {
+    -webkit-text-fill-color: #FF4F33;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #232323;
+}
+
+.slide-pointtext-03 {
+    -webkit-text-fill-color: #19FC67;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #232323;
+}
+
+.slide-pointtext-04 {
+    -webkit-text-fill-color: #336DFF;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #232323;
 }
 
 .slide_btn{
     position: fixed;
-    top: 100px;
-    left: 500px;
-    z-index: 3;
+    top: 120px;
+    left: 450px;
+    width: 120px;
+    height: 30px;
 }
 
+/* link */
+
+.slide a {
+    display: inline-block;
+    color: #fff;
+    font-weight: 300;
+    font-family: 'SUIT-Light';
+    letter-spacing: 1px;
+    font-size: 16px;
+    /* padding: 16px 32px;
+    border-radius: 50px;
+    border: 1px solid #232323; */
+    transition: all 0.3s ease-in-out;
+    text-align: center;
+}
+
+.slide a::after {
+    content: "";
+    display: block;
+    width: 50px;
+    border-bottom: 2px solid #fff;
+    margin: -40px auto;
+}
+
+.slide a span {
+    font-family: 'SUIT-SemiBold';
+}
+
+/* button */
+#slide-01 a:hover {
+    color: #E1FF2D;
+    border-radius: 30px;
+    border-color: #E1FF2D;
+    border: 1px solid;
+    padding: 20px 20px;
+}
+
+#slide-02 a:hover {
+    color: #FF4F33;
+    border-radius: 30px;
+    border-color: #FF4F33;
+    border: 1px solid;
+    padding: 20px 20px;
+}
+
+#slide-03 a:hover {
+    color: #19FC67;
+    border-radius: 30px;
+    border-color: #19FC67;
+    border: 1px solid;
+    padding: 20px 20px;
+}
+
+#slide-04 a:hover {
+    color: #336DFF;
+    border-radius: 30px;
+    border-color: #336DFF;
+    border: 1px solid;
+    padding: 20px 20px;
+}
+
+
 .slider_right{
-    position: absolute;
+    position:absolute;
     top: 0;
-    left: 1620px;
+    left: 1630px;
     width: 300px;
     height: 900px;
     background-color: aqua;
-    z-index: 0;
-    z-index: 1;
+}
+
+.next{
+    position:absolute;
+    width: 135px;
+    height: 100px;
+    top: 450px;
+}
+
+.next_line01{
+    position: absolute;
+    width: 55px;
+    height: 3px;
+    left: 155px;
+    background-color: #fff;
+}
+
+.next_line02{
+    position: absolute;
+    width: 80px;
+    height: 1px;
+    top: 1px;
+    left: 210px;
+    background-color: #fff;
+}
+
+.next_text{
+    position: absolute;
+    top: 15px;
+    left: 155px;
+    width: 55px;
+    color: #fff;
+    text-align: center;
+    font-family: 'SUIT-Light';
 }
